--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <module>craftbukkit-nms-v1_18_R1</module>
         <module>craftbukkit-nms-v1_18_R2</module>
         <module>craftbukkit-nms-v1_19_R1</module>
+        <module>craftbukkit-nms-v1_19_R2</module>
         <!-- Sponge (Temporarily disable) -->
         <!-- <module>sponge-common</module>
         <module>sponge-mcp-v1_12_R1</module>
@@ -95,7 +96,24 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <revision>5.3.0</revision>
     </properties>
-
+    <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>nms</id>
+            <url>https://repo.codemc.io/repository/nms-local/</url>
+        </repository>
+        <repository>
+            <id>codemc</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
+        </repository>
+        <repository>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
+    </repositories>
     <scm>
         <connection>scm:git:ssh://github.com/BeYkeRYkt/LightAPI</connection>
         <developerConnection>scm:git:ssh://github.com/BeYkeRYkt/LightAPI</developerConnection>
