--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'maven-publish'
 	id 'java-library'
+	id 'io.papermc.paperweight.userdev' version "1.5.0" apply false
 }
 
 ext {
@@ -12,7 +13,7 @@ allprojects {
 	java.sourceCompatibility = JavaVersion.VERSION_1_8
 	
 	apply plugin: 'java-library'
-	
+
 	repositories {
 		mavenLocal()
 		maven { url = uri('https://repo.maven.apache.org/maven2/') }
